# rag-framework

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  docker-compose.yml  index.html  package.json  pyproject.toml  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md  work_package.md
.github/workflows/: notebook-check.yml  python-tests.yml
assets/: index-f7f8b7e4.js
assets/diagrams/: .gitkeep
chunking-viz/: README.md  index.html  package.json
configs/: agents.yaml  chunking.yaml  evaluation.yaml  forecasting.yaml  ingestion.yaml  inventory_config.yaml  retrieval.yaml  vectorstore.yaml
data/: README.md
docs/: 00_overview.md  01_einleitung.md  02_theoretische_grundlagen.md  03_stand_der_forschung.md  04_forschungsdesign_architektur.md  05_datenbasis_vorverarbeitung.md  06_semantische_ingestion.md  07_vektordatenbank_wissensorganisation.md  08_agentengestuetzte_architektur.md  09_prognosemodellierung.md  10_prototypische_realisierung.md  11_evaluation.md  12_fazit_ausblick.md
frontend/: README.md  index.html  package-lock.json
landing-page/: README.md
notebooks/: 01_chunking_embedding.ipynb  01_chunking_embedding_1.ipynb  01_data_discovery.ipynb  02_document_extraction.ipynb  03_chunking_experiments.ipynb  04_embeddings_retrieval.ipynb  05_vector_database.ipynb  06_agentic_rag.ipynb  07_forecasting_exogenous_factors.ipynb  08_evaluation.ipynb  README.md
tests/: test_agents.py  test_chunking.py  test_evaluation.py  test_forecasting.py  test_ingestion.py  test_retrieval.py
(+56 files in other folders)
